--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_chat_detail.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_chat_detail.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
-    tools:background="@mipmap/app_room_bg"
-    android:paddingTop="25dp"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingTop="25dp"
+    tools:background="@mipmap/app_room_bg">
 
     <io.agora.scene.aichat.imkit.widget.EaseTitleBar
         android:id="@+id/titleView"
@@ -27,18 +27,18 @@
             android:id="@+id/layout_chat_message"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_above="@+id/chat_chat_input_menu"/>
+            android:layout_above="@+id/chat_chat_input_menu"
+            android:layout_alignParentTop="true" />
 
         <!--  按住录音  -->
         <FrameLayout
             android:id="@+id/layout_speaker_tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:visibility="gone"
-            android:layout_marginEnd="20dp"
             android:layout_above="@+id/chat_chat_input_menu"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:visibility="gone"
             tools:visibility="visible">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -57,11 +57,25 @@
                 android:textSize="12sp" />
         </FrameLayout>
 
+        <!--  群聊智能体 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvGroupAgentList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/chat_chat_input_menu"
+            android:layout_marginStart="20dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="7"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:listitem="@layout/aichat_item_chat_bottom_group_agent" />
+
         <io.agora.scene.aichat.imkit.widget.EaseChatPrimaryMenu
             android:id="@+id/chat_chat_input_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
 </LinearLayout>
