--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_edit.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_edit.xml
@@ -4,15 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="@mipmap/bg_app_def_white"
-    android:paddingBottom="30dp">
+    android:paddingBottom="30dp"
+    tools:background="@mipmap/bg_app_def_white">
 
-    <io.agora.scene.widget.CommonTitleView
-        android:id="@+id/titleView"
-        android:layout_width="match_parent"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_confirm"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:ctv_centerText="@string/aichat_create_group"
-        tools:ignore="MissingConstraints" />
+        android:layout_marginTop="12dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="12dp"
+        android:text="@string/confirm"
+        android:textColor="@color/def_text_grey_979"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_back_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableStart="@mipmap/back_empty"
+        android:drawablePadding="4dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="12dp"
+        android:text="@string/aichat_edit_group_name"
+        android:textColor="@color/def_text_grey_303"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_confirm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_confirm" />
 
     <!--    圆角输入框-->
     <com.google.android.material.card.MaterialCardView
@@ -25,7 +46,7 @@
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleView">
+        app:layout_constraintTop_toBottomOf="@id/tv_confirm">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,58 +96,4 @@
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_chat_partner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/aichat_group_partener"
-        android:textColor="@color/def_text_grey_303"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/cv_group_name"
-        app:layout_constraintTop_toBottomOf="@id/cv_group_name" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_max_agents"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/aichat_group_create_desc"
-        android:textColor="@color/def_text_grey_979"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_chat_partner"
-        app:layout_constraintStart_toEndOf="@id/tv_chat_partner"
-        app:layout_constraintTop_toTopOf="@id/tv_chat_partner" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingHorizontal="32dp"
-        android:paddingVertical="20dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/btnCreateAgent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_chat_partner" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnCreateAgent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/aichat_bg_create_agent"
-        android:text="@string/aichat_create_group"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
