--- a/Android/scenes/aichat/src/main/res/layout/aichat_item_contact_select.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_item_contact_select.xml
@@ -9,10 +9,9 @@
         android:id="@+id/mcv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="6dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="0dp">
 
