--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_chat_detail.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_chat_detail.xml
@@ -13,7 +13,6 @@
         android:id="@+id/titleView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
         app:showCommonImage="true"
         app:showDoubleOverlayImage="false"
         app:showMoreIcon="false"
@@ -27,7 +26,7 @@
             android:id="@+id/layout_chat_message"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/chat_chat_input_menu"
+            android:layout_above="@+id/rvGroupAgentList"
             android:layout_alignParentTop="true" />
 
         <!--  按住录音  -->
