--- a/Android/scenes/aichat/src/main/res/layout/aichat_item_contact_select.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_item_contact_select.xml
@@ -34,11 +34,15 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="14dp"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginEnd="12dp"
+                app:layout_constraintEnd_toStartOf="@+id/iv_check"
                 app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                 app:layout_constraintStart_toEndOf="@id/iv_icon"
                 app:layout_constraintTop_toTopOf="@id/iv_icon"
@@ -54,9 +58,5 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </com.google.android.material.card.MaterialCardView>
-
-
 </FrameLayout>
