--- a/Android/scenes/aichat/src/main/res/layout/ease_row_received_message.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_row_received_message.xml
@@ -78,25 +78,28 @@
             android:maxWidth="240dp"
             android:textColor="@color/black33"
             android:textSize="14sp"
+            android:minWidth="64dp"
             app:layout_constraintBottom_toTopOf="@+id/ll_bubble_bottom"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="单行文本" />
+            tools:text="单行" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll_bubble_bottom"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/tv_chatcontent"
             app:layout_constraintStart_toStartOf="@+id/tv_chatcontent"
+            app:layout_constraintEnd_toEndOf="@id/tv_chatcontent"
             app:layout_constraintTop_toBottomOf="@+id/tv_chatcontent">
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/divider"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0.5dp"
                 android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
@@ -104,9 +107,21 @@
                 android:layout_width="14dp"
                 android:layout_height="14dp"
                 android:layout_marginTop="10dp"
+                tools:visibility="invisible"
                 android:src="@drawable/aichat_icon_start_play"
                 app:layout_constraintStart_toStartOf="@id/divider"
                 app:layout_constraintTop_toBottomOf="@id/divider" />
+
+            <ProgressBar
+                android:id="@+id/progress_recognition"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:indeterminateDrawable="@drawable/aichat_recognition_progress_bar"
+                app:layout_constraintStart_toStartOf="@id/divider"
+                app:layout_constraintTop_toBottomOf="@id/divider"/>
 
             <TextView
                 android:id="@+id/tv_msg_start_play"
@@ -115,7 +130,8 @@
                 android:layout_marginStart="4dp"
                 android:textColor="@color/def_text_color_3c4"
                 android:textSize="11sp"
-                android:text="@string/aichat_click_to_play"
+                android:maxLines="1"
+                android:text="@string/aichat_click_to_recognition"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_msg_start_play"
                 app:layout_constraintStart_toEndOf="@+id/iv_msg_start_play"
                 app:layout_constraintTop_toTopOf="@+id/iv_msg_start_play"
