[Fix][Ai-Chat] ui

--- a/Android/scenes/aichat/src/main/res/values/ease_ids.xml
+++ b/Android/scenes/aichat/src/main/res/values/ease_ids.xml
@@ -104,5 +104,6 @@
     <item name="thread_more_destroy" type="id"/>
 
     <item name="ease_url_preview" type="id"/>
+    <item name="ease_typing_job" type="id"/>
 
 </resources>
