--- a/Android/scenes/aichat/src/main/res/layout/ease_row_loading_message.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_row_loading_message.xml
@@ -40,13 +40,11 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bubble"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="68dp"
+        android:layout_height="42dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
         android:background="@drawable/aichat_message_item_left_bg"
-        android:paddingHorizontal="14dp"
-        android:paddingVertical="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_userhead"
         app:layout_constraintTop_toBottomOf="@+id/ll_top_bubble"
@@ -55,8 +53,10 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="40dp"
-            android:layout_height="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
