--- a/Android/scenes/aichat/src/main/res/layout/aichat_activity_list.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_activity_list.xml
@@ -9,7 +9,7 @@
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/titleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         app:ctv_centerText="@string/aichat_name"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toTopOf="parent"
