--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_ai_agent_select.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_ai_agent_select.xml
@@ -9,8 +9,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="8dp">
+        android:layout_height="44dp"
+        android:layout_marginTop="14dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_back_title"
