--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_create_agent.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_create_agent.xml
@@ -7,44 +7,53 @@
     android:background="@mipmap/bg_app_def_white"
     android:paddingBottom="30dp">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_back_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutTop"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
         android:layout_marginTop="25dp"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="9dp"
-        android:src="@drawable/aichat_icon_close"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_aichat_create_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/aichat_create_agent"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/iv_back_icon" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_back_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="16dp"
+            android:src="@drawable/aichat_icon_close"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_aichat_create_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/aichat_create_count"
-        android:textColor="#919BA1"
-        android:textSize="11sp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_aichat_create_title" />
+        <TextView
+            android:id="@+id/tv_aichat_create_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:text="@string/aichat_create_agent"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_aichat_create_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:gravity="center"
+            android:text="@string/aichat_create_count"
+            android:textColor="#919BA1"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
         android:id="@+id/sv_aichat_create"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_aichat_create"
-        app:layout_constraintTop_toBottomOf="@+id/tv_aichat_create_info">
+        app:layout_constraintTop_toBottomOf="@+id/layoutTop">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -177,9 +186,10 @@
                 android:layout_marginTop="8dp"
                 android:background="@android:color/transparent"
                 android:gravity="start|top"
+                android:lines="99"
                 android:hint="@string/aichat_create_brief_hint"
                 android:imeOptions="actionNext"
-                android:inputType="text"
+                android:inputType="text|textMultiLine"
                 android:textColor="#303553"
                 android:textColorHint="#979CBB"
                 android:textSize="16sp"
@@ -276,10 +286,13 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/aichat_bg_create_agent"
+        android:elevation="6dp"
+        android:shadowColor="#000"
         android:text="@string/aichat_create_agent"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:translationZ="8dp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
