--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_delete_buddy.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_delete_buddy.xml
@@ -8,8 +8,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="8dp">
+        android:layout_height="44dp"
+        android:layout_marginTop="14dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_back_title"
@@ -27,11 +27,11 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_confirm_select"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="end|center_vertical"
             android:enabled="false"
+            android:gravity="center"
             android:paddingHorizontal="20dp"
-            android:paddingVertical="12dp"
             android:text="@string/aichat_delete"
             android:textColor="@color/aichat_text_grey_989"
             android:textSize="14sp"
