--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_detail.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_detail.xml
@@ -10,7 +10,7 @@
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/titleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         app:ctv_centerText="@string/aichat_group_manager"
         app:ctv_rightImageSrc="@drawable/aichat_icon_more_black"
         tools:ignore="MissingConstraints" />
