--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_edit.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_group_edit.xml
@@ -10,25 +10,25 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_confirm"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginTop="12dp"
         android:paddingHorizontal="20dp"
-        android:paddingVertical="12dp"
         android:text="@string/confirm"
         android:textColor="@color/def_text_grey_979"
         android:textSize="16sp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_back_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:drawableStart="@mipmap/back_empty"
         android:drawablePadding="4dp"
         android:paddingHorizontal="20dp"
-        android:paddingVertical="12dp"
         android:text="@string/aichat_edit_group_name"
+        android:gravity="center"
         android:textColor="@color/def_text_grey_303"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_confirm"
@@ -41,7 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
