--- a/Android/scenes/aichat/src/main/res/layout/aichat_item_chat_group_create.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_item_chat_group_create.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingBottom="10dp">
 
-
     <FrameLayout
         android:layout_width="64dp"
+        android:layout_gravity="center_horizontal"
         android:layout_height="64dp">
-
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/mcv"
