--- a/Android/scenes/aichat/src/main/res/layout/aichat_item_contact_select.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_item_contact_select.xml
@@ -12,13 +12,16 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="6dp"
+        app:strokeColor="#E4E4E4CC"
+        app:strokeWidth="0.5dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutView"
             android:layout_width="match_parent"
             android:layout_height="88dp"
-            android:background="@drawable/aichat_agent_bg_0"
+            android:background="@drawable/aichat_agent_item_green_bg"
             android:paddingStart="18dp"
             android:paddingEnd="24dp">
 
@@ -40,6 +43,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:maxLines="1"
+                android:textStyle="bold"
                 android:ellipsize="end"
                 android:layout_marginEnd="12dp"
                 app:layout_constraintEnd_toStartOf="@+id/iv_check"
