--- a/Android/scenes/aichat/src/main/res/layout/ease_row_sent_message.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_row_sent_message.xml
@@ -5,7 +5,6 @@
     android:id="@+id/cl_bubble_out"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingEnd="20dp"
     android:paddingBottom="16dp">
 
     <TextView
@@ -32,6 +31,7 @@
         android:background="@drawable/aichat_message_item_right_bg"
         android:paddingHorizontal="14dp"
         android:paddingVertical="10dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timestamp"
