--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -27,7 +27,7 @@
             android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/aichat_icon_calling"
+            android:src="@drawable/aichat_icon_calling"
             android:visibility="visible" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -53,6 +53,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/aichat_lets_chat"
                 android:imeOptions="actionSend"
+                android:textColorHint="@color/def_text_grey_303"
                 android:inputType="text"
                 android:lineSpacingExtra="3dp"
                 android:textColor="@color/black"
@@ -65,17 +66,18 @@
             android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/aichat_icon_speaker"
+            android:src="@drawable/aichat_icon_speaker"
             android:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_set_mode_send"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="30dp"
+            tools:visibility="visible"
+            android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:layout_marginStart="5dp"
             android:layout_marginBottom="11dp"
-            android:background="@drawable/aichat_icon_send_message_selector"
+            android:src="@drawable/aichat_icon_send_message_selector"
             android:visibility="gone" />
 
     </LinearLayout>
